--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Deskripsi Unit Mesin</h2>
     <div id="mesin-info"></div>
     <a id="inputLink" href="#"><button>📝 Input Maintenance</button></a>
-    <a href="https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/edit" target="_blank"><button>📊 Lihat Data</button></a>
+    <a href="https://docs.google.com/spreadsheets/d/127B92DikeFWmYGmhOP_fso0Ag87LwZGfMkNc9O76js4/edit?usp=sharing" target="_blank"><button>📊 Lihat Data</button></a>
   </div>
 
   <script>
