--- a/index.html
+++ b/index.html
@@ -6,6 +6,41 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="riwayat">
+  <h3>Riwayat Maintenance</h3>
+  <div id="dataRiwayat">Memuat...</div>
+</div>
+
+<script>
+  const idMesin = new URLSearchParams(window.location.search).get("id");
+  fetch(`https://script.google.com/macros/s/AKfycbx.../exec?id=${idMesin}`)
+    .then(res => res.json())
+    .then(data => {
+      if (data.length === 0) {
+        document.getElementById("dataRiwayat").innerHTML = "Belum ada data.";
+        return;
+      }
+      let html = "<table><tr>";
+      Object.keys(data[0]).forEach(key => {
+        html += `<th>${key}</th>`;
+      });
+      html += "</tr>";
+      data.forEach(row => {
+        html += "<tr>";
+        Object.values(row).forEach(val => {
+          html += `<td>${val}</td>`;
+        });
+        html += "</tr>";
+      });
+      html += "</table>";
+      document.getElementById("dataRiwayat").innerHTML = html;
+    })
+    .catch(err => {
+      console.error(err);
+      document.getElementById("dataRiwayat").innerText = "Gagal mengambil data.";
+    });
+</script>
+
   <div class="container">
     <h2>Deskripsi Unit Mesin</h2>
     <div id="mesin-info"></div>
