--- a/unit.html
+++ b/unit.html
@@ -26,7 +26,8 @@
 
     async function loadUnitInfo() {
       try {
-        const response = await fetch('https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec?id=' + unitId);
+        const response = await fetch('https://script.google.com/macros/s/AKfycbycIVHoSc1jXeujWPqabi5Q7m5XzzmSqFnEbb4_GgA4TiMegM6TO8DbTiHn0sgtK9ng/exec' + unitId);
+      
         const data = await response.json();
         if (data.length > 0) {
           const info = data[0];
