--- a/unit.html
+++ b/unit.html
@@ -58,7 +58,7 @@
     function openSheet() {
       const pw = prompt("Masukkan password:");
       if (pw === "1234") {
-        window.open("https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID", "_blank");
+        window.open("https://docs.google.com/spreadsheets/d/127B92DikeFWmYGmhOP_fso0Ag87LwZGfMkNc9O76js4/edit?usp=sharing", "_blank");
       } else {
         alert("Password salah.");
       }
