--- a/unit.html
+++ b/unit.html
@@ -31,7 +31,9 @@
           }
       
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbycIVHoSc1jXeujWPqabi5Q7m5XzzmSqFnEbb4_GgA4TiMegM6TO8DbTiHn0sgtK9ng/exec' + unitId);
+        const response = await fetch(`https://script.google.com/macros/s/AKfycbycIVHoSc1jXeujWPqabi5Q7m5XzzmSqFnEbb4_GgA4TiMegM6TO8DbTiHn0sgtK9ng/exec?action=getDeskripsi&id=${unitId}`);
+
+        //const response = await fetch('https://script.google.com/macros/s/AKfycbycIVHoSc1jXeujWPqabi5Q7m5XzzmSqFnEbb4_GgA4TiMegM6TO8DbTiHn0sgtK9ng/exec' + unitId);
       
         const data = await response.json();
         if (data.length > 0) {
