--- a/unit.html
+++ b/unit.html
@@ -34,25 +34,45 @@
         const response = await fetch(`https://script.google.com/macros/s/AKfycbwF-Q5xQBcR6OEZ3YoUdcBmBaraB9fH2-Nfu04A0kfnrWTmZeI5-FGxYBJoteaonuVp/exec?action=getDeskripsi&id=${unitId}`);
 //https://script.google.com/macros/s/AKfycbwF-Q5xQBcR6OEZ3YoUdcBmBaraB9fH2-Nfu04A0kfnrWTmZeI5-FGxYBJoteaonuVp/exec
         //const response = await fetch('https://script.google.com/macros/s/AKfycbycIVHoSc1jXeujWPqabi5Q7m5XzzmSqFnEbb4_GgA4TiMegM6TO8DbTiHn0sgtK9ng/exec' + unitId);
-      
-        const data = await response.json();
-        if (data.length > 0) {
-          const info = data[0];
-          document.getElementById('unit-info').innerHTML = `
-            <strong>ID Mesin:</strong> ${info['ID Mesin']}<br>
-            <strong>Nama Mesin:</strong> ${info['Nama Mesin']}<br>
-            <strong>Merk Elektromotor:</strong> ${info['Merk Elektromotor']}<br>
-            <strong>Daya:</strong> ${info['Daya']} kW<br>
-            <strong>RPM:</strong> ${info['RPM']}<br>
-            <strong>Lokasi:</strong> ${info['Lokasi']}<br>
-          `;
-        } else {
-          document.getElementById('unit-info').innerText = 'Data tidak ditemukan.';
-        }
-      } catch (err) {
-        document.getElementById('unit-info').innerText = 'Gagal memuat data.';
-      }
-    }
+
+const params = new URLSearchParams(window.location.search);
+    const id = params.get('id');
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwF-Q5xQBcR6OEZ3YoUdcBmBaraB9fH2-Nfu04A0kfnrWTmZeI5-FGxYBJoteaonuVp/exec';// Ganti dengan URL kamu
+
+    // Ambil info deskripsi unit
+    fetch(`${scriptURL}?id=${id}&action=getDeskripsi`)
+      .then(res => res.json())
+      .then(data => {
+        const div = document.getElementById('unitInfo');
+        div.innerHTML = `
+          <p><strong>ID Mesin:</strong> ${data['ID Mesin']}</p>
+          <p><strong>Nama Mesin:</strong> ${data['Nama Mesin']}</p>
+          <p><strong>Merk Elektromotor:</strong> ${data['Merk Elektromotor']}</p>
+          <p><strong>Daya (kW):</strong> ${data['Daya (kW)']}</p>
+          <p><strong>RPM:</strong> ${data['RPM']}</p>
+          <p><strong>Lokasi:</strong> ${data['Lokasi']}</p>
+        `;
+      });
+
+        
+    //     const data = await response.json();
+    //     if (data.length > 0) {
+    //       const info = data[0];
+    //       document.getElementById('unit-info').innerHTML = `
+    //         <strong>ID Mesin:</strong> ${info['ID Mesin']}<br>
+    //         <strong>Nama Mesin:</strong> ${info['Nama Mesin']}<br>
+    //         <strong>Merk Elektromotor:</strong> ${info['Merk Elektromotor']}<br>
+    //         <strong>Daya:</strong> ${info['Daya']} kW<br>
+    //         <strong>RPM:</strong> ${info['RPM']}<br>
+    //         <strong>Lokasi:</strong> ${info['Lokasi']}<br>
+    //       `;
+    //     } else {
+    //       document.getElementById('unit-info').innerText = 'Data tidak ditemukan.';
+    //     }
+    //   } catch (err) {
+    //     document.getElementById('unit-info').innerText = 'Gagal memuat data.';
+    //   }
+    // }
 
     function navigateToInput() {
       window.location.href = 'input.html?id=' + unitId;
