--- a/unit.html
+++ b/unit.html
@@ -35,8 +35,7 @@
 //https://script.google.com/macros/s/AKfycbwF-Q5xQBcR6OEZ3YoUdcBmBaraB9fH2-Nfu04A0kfnrWTmZeI5-FGxYBJoteaonuVp/exec
         //const response = await fetch('https://script.google.com/macros/s/AKfycbycIVHoSc1jXeujWPqabi5Q7m5XzzmSqFnEbb4_GgA4TiMegM6TO8DbTiHn0sgtK9ng/exec' + unitId);
 
-const params = new URLSearchParams(window.location.search);
-    const id = params.get('id');
+    const id = urlparams.get('id');
     const scriptURL = 'https://script.google.com/macros/s/AKfycbwF-Q5xQBcR6OEZ3YoUdcBmBaraB9fH2-Nfu04A0kfnrWTmZeI5-FGxYBJoteaonuVp/exec';// Ganti dengan URL kamu
 
     // Ambil info deskripsi unit
