--- a/unit.html
+++ b/unit.html
@@ -35,45 +35,30 @@
 //https://script.google.com/macros/s/AKfycbwF-Q5xQBcR6OEZ3YoUdcBmBaraB9fH2-Nfu04A0kfnrWTmZeI5-FGxYBJoteaonuVp/exec
         //const response = await fetch('https://script.google.com/macros/s/AKfycbycIVHoSc1jXeujWPqabi5Q7m5XzzmSqFnEbb4_GgA4TiMegM6TO8DbTiHn0sgtK9ng/exec' + unitId);
 
-          const data = await response.json();
-          console.log("DATA DARI APPS SCRIPT:", data);
-            if (data && data["ID Mesin"]) {
-              const info = data;
-              document.getElementById('unit-info').innerHTML = `
-                <strong>ID Mesin:</strong> ${info['ID Mesin']}<br>
-                <strong>Nama Mesin:</strong> ${info['Nama Mesin']}<br>
-                <strong>Merk Elektromotor:</strong> ${info['Merk Elektromotor']}<br>
-                <strong>Daya:</strong> ${info['Daya']} kW<br>
-                <strong>RPM:</strong> ${info['RPM']}<br>
-                <strong>Lokasi:</strong> ${info['Lokasi']}<br>
-              `;
-            } else {
-              document.getElementById('unit-info').innerText = 'Data tidak ditemukan.';
-            }
-
-        // const data = await response.json();
-        // if (data.length > 0) {
-        //   const info = data[0];
-        //   document.getElementById('unit-info').innerHTML = `
-        //     <strong>ID Mesin:</strong> ${info['ID Mesin']}<br>
-        //     <strong>Nama Mesin:</strong> ${info['Nama Mesin']}<br>
-        //     <strong>Merk Elektromotor:</strong> ${info['Merk Elektromotor']}<br>
-        //     <strong>Daya:</strong> ${info['Daya']} kW<br>
-        //     <strong>RPM:</strong> ${info['RPM']}<br>
-        //     <strong>Lokasi:</strong> ${info['Lokasi']}<br>
-        //   `;
-        // } else {
-        //   document.getElementById('unit-info').innerText = 'Data tidak ditemukan.';
-        // }
-      } catch (err) {
-        document.getElementById('unit-info').innerText = 'Gagal memuat data.';
-      }
-    }
-    function navigateToInput() {
-    window.open('https://docs.google.com/forms/d/1foaqJh-s0nNyO9tpl9o_6WgwIWOhU8rMppFWbC8digo/viewform', '_blank');
+    //       const data = await response.json();
+    //       console.log("DATA DARI APPS SCRIPT:", data);
+    //         if (data && data["ID Mesin"]) {
+    //           const info = data;
+    //           document.getElementById('unit-info').innerHTML = `
+    //             <strong>ID Mesin:</strong> ${info['ID Mesin']}<br>
+    //             <strong>Nama Mesin:</strong> ${info['Nama Mesin']}<br>
+    //             <strong>Merk Elektromotor:</strong> ${info['Merk Elektromotor']}<br>
+    //             <strong>Daya:</strong> ${info['Daya']} kW<br>
+    //             <strong>RPM:</strong> ${info['RPM']}<br>
+    //             <strong>Lokasi:</strong> ${info['Lokasi']}<br>
+    //           `;
+    //         } else {
+    //           document.getElementById('unit-info').innerText = 'Data tidak ditemukan.';
+    //         }
+    //   } catch (err) {
+    //     document.getElementById('unit-info').innerText = 'Gagal memuat data.';
+    //   }
+    // }
     // function navigateToInput() {
-    //   window.location.href = 'input.html?id=' + unitId;
-    }
+    // window.open('https://docs.google.com/forms/d/1foaqJh-s0nNyO9tpl9o_6WgwIWOhU8rMppFWbC8digo/viewform', '_blank');
+    // // function navigateToInput() {
+    // //   window.location.href = 'input.html?id=' + unitId;
+    // }
 
     function navigateToHistory() {
       window.location.href = 'history.html?id=' + unitId;
