--- a/unit.html
+++ b/unit.html
@@ -54,10 +54,10 @@
         document.getElementById('unit-info').innerText = 'Gagal memuat data.';
       }
     }
-    function navigateToInput() {
-    window.open('https://docs.google.com/forms/d/1foaqJh-s0nNyO9tpl9o_6WgwIWOhU8rMppFWbC8digo/viewform', '_blank');
     // function navigateToInput() {
-    //   window.location.href = 'input.html?id=' + unitId;
+    // window.open('https://docs.google.com/forms/d/1foaqJh-s0nNyO9tpl9o_6WgwIWOhU8rMppFWbC8digo/viewform', '_blank');
+    function navigateToInput() {
+      window.location.href = 'input.html?id=' + unitId;
     }
 
     function navigateToHistory() {
